--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,16 @@ padding: 30px 0px;
   min-height: 300px;
   position: relative;
 }
+.heart{
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top:20px;
+  right:0px;
+  background-color: white;
+  font-size: 25px;
+  padding: 5px 10px;
+}
 
 /* ARTICLE DESCRIPTION */
 
